fix intro whitespace to be suitable for plaintext custom intros

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,9 @@ body {
   background-color: rgb(237, 224, 206);
   -webkit-font-smoothing: antialiased;
 }
+#intro {
+    white-space: pre-wrap;
+}
 article, header {
   background-color: #fff;
   color: #222222;
